api-contract/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-contract
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: api-contract
  template:
    metadata:
      labels:
        app: api-contract
    spec:
      containers:
        - name: api-contract
          image: docker.swagger.io/swaggerapi/swagger-ui:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: contracts
              mountPath: /usr/share/nginx/html/contracts
              readOnly: true
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 0m
              memory: 0Mi
      volumes:
        - name: contracts
          configMap:
            name: api-contract
