api-contract/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-contract
  labels:
    app: api-contract
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  selector:
    app: api-contract
